* floating cart on mobile fixed

--- a/frontend/src/app/floating-cart/floating-cart.component.css
+++ b/frontend/src/app/floating-cart/floating-cart.component.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   right: -1200px;
-  width: 60vw;
+  width: 90%;
   max-width: 1200px;
   height: 100%;
   background-color: #fff;
